Streamline TripController annotations, simplify exception handling, and update TripService methods for improved readability and consistency. Adjust WebConfiguration to limit trip endpoint access to authenticated users only.