@@ -5,10 +5,8 @@ import bbw.tm.backend.account.Account;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,37 +15,38 @@ public class TripService {
     private final TripRepository tripRepository;
 
     /**
-     * Holt alle Reisen für einen bestimmten Account.
+     * Holt alle Trips des authentifizierten Accounts.
      *
-     * @param account Der Account, dessen Trips abgerufen werden sollen
-     * @return Liste der Trips in Form von ResponseDTOs
+     * @param account Der Account, dessen Trips abgerufen werden sollen.
+     * @return Eine Liste der Trips als ResponseDTOs.
      */
     public List<TripResponseDTO> getAllTripsForAccount(Account account) {
-        return tripRepository.findAllByAccountId(account.getId())
-                .stream()
+        return tripRepository.findAllByAccountId(account.getId()).stream()
                 .map(TripMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
-     * Holt einen bestimmten Trip anhand der ID, sofern er zum aktuellen Account gehört.
+     * Holt einen bestimmten Trip anhand der ID, wenn er dem Account gehört.
      *
-     * @param id      Die ID des Trips
-     * @param account Der Account, dessen Trips überprüft werden
-     * @return Der gesuchte Trip als ResponseDTO
+     * @param id      Die ID des Trips.
+     * @param account Der Account, dessen Trips überprüft werden.
+     * @return Der gesuchte Trip als ResponseDTO.
      */
     public TripResponseDTO getTripByIdForAccount(Integer id, Account account) {
         return tripRepository.findByIdAndAccountId(id, account.getId())
                 .map(TripMapper::toResponseDTO)
-                .orElseThrow(() -> createFailedValidationException("id", "Trip wurde nicht gefunden"));
+                .orElseThrow(() -> new FailedValidationException(
+                        Map.of("id", List.of("Trip wurde nicht gefunden oder gehört nicht zu Ihrem Account"))
+                ));
     }
 
     /**
      * Erstellt einen neuen Trip für einen bestimmten Account.
      *
-     * @param requestDTO Die Daten des neuen Trips (RequestDTO)
-     * @param account    Der Account, für den der Trip erstellt werden soll
-     * @return Der erstellte Trip in Form eines ResponseDTOs
+     * @param requestDTO Die Daten des neuen Trips.
+     * @param account    Der Account, für den der Trip erstellt werden soll.
+     * @return Der erstellte Trip als ResponseDTO.
      */
     public TripResponseDTO createTrip(TripRequestDTO requestDTO, Account account) {
         Trip trip = TripMapper.toTrip(requestDTO, account);
@@ -56,18 +55,20 @@ public class TripService {
     }
 
     /**
-     * Aktualisiert einen vorhandenen Trip für einen bestimmten Account, basierend auf den übergebenen Daten.
+     * Aktualisiert einen vorhandenen Trip, wenn er zum Account gehört.
      *
-     * @param id         Die ID des zu aktualisierenden Trips
-     * @param requestDTO Die neuen Daten des Trips (RequestDTO)
-     * @param account    Der Account, für den der Trip aktualisiert werden soll
-     * @return Der aktualisierte Trip als ResponseDTO
+     * @param id         Die ID des zu aktualisierenden Trips.
+     * @param requestDTO Die neuen Daten des Trips.
+     * @param account    Der Account, dessen Trip aktualisiert werden soll.
+     * @return Der aktualisierte Trip als ResponseDTO.
      */
     public TripResponseDTO updateTripForAccount(Integer id, TripRequestDTO requestDTO, Account account) {
         Trip trip = tripRepository.findByIdAndAccountId(id, account.getId())
-                .orElseThrow(() -> createFailedValidationException("id", "Trip wurde nicht gefunden"));
+                .orElseThrow(() -> new FailedValidationException(
+                        Map.of("id", List.of("Trip wurde nicht gefunden oder gehört nicht zu Ihrem Account"))
+                ));
 
-
+        // Partielle Aktualisierung der Felder
         if (requestDTO.getTripType() != null) {
             trip.setTripType(requestDTO.getTripType());
         }
@@ -83,27 +84,16 @@ public class TripService {
     }
 
     /**
-     * Löscht einen vorhandenen Trip eines Accounts, basierend auf der ID.
+     * Löscht einen bestimmten Trip, wenn er zum Account gehört.
      *
-     * @param id      Die ID des zu löschenden Trips
-     * @param account Der Account, dessen Trip gelöscht werden soll
+     * @param id      Die ID des Trips.
+     * @param account Der Account, dessen Trip gelöscht werden soll.
      */
     public void deleteTripForAccount(Integer id, Account account) {
         Trip trip = tripRepository.findByIdAndAccountId(id, account.getId())
-                .orElseThrow(() -> createFailedValidationException("id", "Trip wurde nicht gefunden"));
+                .orElseThrow(() -> new FailedValidationException(
+                        Map.of("id", List.of("Trip wurde nicht gefunden oder gehört nicht zu Ihrem Account"))
+                ));
         tripRepository.delete(trip);
-    }
-
-    /**
-     * Hilfsmethode zur Erstellung einer FailedValidationException.
-     *
-     * @param field   Das Feld, das den Fehler verursacht hat
-     * @param message Die Fehlermeldung
-     * @return Eine Instanz von FailedValidationException
-     */
-    private FailedValidationException createFailedValidationException(String field, String message) {
-        Map<String, List<String>> errors = new HashMap<>();
-        errors.put(field, List.of(message));
-        return new FailedValidationException(errors);
     }
 }
